Fix: Align 'Chicago' text in Hero section and other styling updates

--- a/little-lemon-restaurant-master/src/components/pages/Home/Hero.css
+++ b/little-lemon-restaurant-master/src/components/pages/Home/Hero.css
@@ -24,6 +24,7 @@
   font-size: 2.25rem;
   height: 2.25rem;
   line-height: 2.25rem;
+  margin-left: 0;
 }
 
 .hero-information p {
